# RND1

./: .gitignore  LICENSE  README.md  demo_rnd_generation.py  pyproject.toml
rnd/: __init__.py  configuration_rnd.py  generation_config.py  generation_utils.py  modeling_rnd.py  sampling.py  terminal_visualizer.py
